--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
 </script>
 
 <script>
-	document.getElementById('videoSRC').src = "core/video/Lil Peep - Save That Shit (Official Video).mp4";
+	document.getElementById('videoSRC').src = "core/video/Selena Gomez, Marshmello - Wolves.mp4";
 	
 	var NameVideo = document.getElementById('NameVideo');
-	NameVideo.innerHTML = "Lil Peep - Save That Shit (Official Video)" + " <3";
-	NameVideo.href = "https://youtu.be/WvV5TbJc9tQ";
+	NameVideo.innerHTML = "Selena Gomez, Marshmello - Wolves" + " <3";
+	NameVideo.href = "http://youtu.be/cH4E_t3m3xM";
 	
 </script>
 
