--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
 </script>
 
 <script>
-	document.getElementById('videoSRC').src = "core/video/Selena Gomez, Marshmello - Wolves.mp4";
+	document.getElementById('videoSRC').src = "core/video/CMH - Incompetence.mp4";
 	
 	var NameVideo = document.getElementById('NameVideo');
-	NameVideo.innerHTML = "Selena Gomez, Marshmello - Wolves" + " <3";
-	NameVideo.href = "http://youtu.be/cH4E_t3m3xM";
+	NameVideo.innerHTML = "CMH - Incompetence" + " <3";
+	NameVideo.href = "https://www.youtube.com/watch?v=EepRWMFMx1o";
 	
 </script>
 
