--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
 </script>
 
 <script>
-	document.getElementById('videoSRC').src = "core/video/CMH - Incompetence.mp4";
+	document.getElementById('videoSRC').src = "core/videosmeshariki - ot vinta.mp4";
 	
 	var NameVideo = document.getElementById('NameVideo');
-	NameVideo.innerHTML = "CMH - Incompetence" + " <3";
+	NameVideo.innerHTML = "igor plotnikov -" + " huesos";
 	NameVideo.href = "https://www.youtube.com/watch?v=EepRWMFMx1o";
 	
 </script>
